# SMMG_6000M_26spring_group3_final

./: .gitignore  README.md  collision.py  kinematics.py  requirements.txt  scene.py  task1_hamiltonian.py  task2_cartesian_paths.py  task3_trajectory_planning.py  task4_collision_avoidance.py  welds.py
artifacts/: task1_hamiltonian_solution.json  task2_cartesian_paths.json  task3_trajectories.json  task4_collision_avoidance.json
docs/: PROBLEM_AND_MODEL.md  TASK1.md  TASK2.md  TASK3.md  TASK4.md  UPSTREAM_INTERFACE_FOR_TASK3.md
scripts/: build_task2_cartesian_paths.py  build_task3_trajectories.py  build_task4_collision_avoidance.py  check_task1_active_pipeline.py  check_task2_active_pipeline.py  check_weld_feasibility.py  plot_scene_welds.py  plot_task1_hamiltonian_graph.py  plot_task2_cartesian_paths.py  plot_task3_trajectories.py  report_collision_validity.py  report_task1_hamiltonian.py  report_task2_cartesian_paths.py  report_task3_trajectories.py  solve_task1_hamiltonian.py
scripts/task4_workspace/install/: local_setup.sh  setup.sh
scripts/task4_workspace/install/hello_moveit/share/hello_moveit/: local_setup.sh  package.ps1  package.sh  package.xml
scripts/task4_workspace/install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig.cmake
scripts/task4_workspace/src/hello_moveit/: CMakeLists.txt
scripts/task4_workspace/src/hello_moveit/launch/: demo.launch.py
scripts/task4_workspace/src/hello_moveit/src/: hello_moveit.cpp
scripts/task4_workspace/src/smmg/: .setup_assistant  CMakeLists.txt  package.xml
tests/: test_collision.py  test_kinematics.py  test_scene_welds.py  test_task1_active_pipeline_smoke.py  test_task1_hamiltonian_smoke.py  test_task2_active_pipeline_smoke.py  test_task2_cartesian_paths_smoke.py  test_task3_trajectory_planning_smoke.py
(+42 files in other folders)
