<?xml version="1.0"?>
<package format="3">
  <name>hello_moveit</name>
  <version>0.1.0</version>
  <description>Interactive marker to MoveIt planner node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>